crates/thread_aware_macros_impl/tests/snapshots/derive__struct_attr_skip.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl ::thread_aware::ThreadAware for Foo
where
    Foo: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.data, source, destination);
    }
}
