crates/thread_aware_macros_impl/tests/snapshots/derive__struct_basic.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl ::thread_aware::ThreadAware for Foo {
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.a,
            __thread_aware_source,
            __thread_aware_destination,
        );
        ::thread_aware::ThreadAware::relocate(
            &mut self.b,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
