crates/thread_aware_macros_impl/tests/snapshots/derive__struct_unit.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl ::thread_aware::ThreadAware for UnitStruct {
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<
            ::thread_aware::affinity::Affinity,
        >,
        __thread_aware_destination: ::thread_aware::affinity::Affinity,
    ) {}
}
