crates/thread_aware_macros_impl/tests/snapshots/derive__tuple_struct_and_enum.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl ::thread_aware::ThreadAware for E
where
    E: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        match *self {
            Self::A(ref mut __thread_aware_field_0) => {
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_0,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
            }
            Self::B(ref mut __thread_aware_field_0, _) => {
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_0,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
            }
            Self::C {
                x: ref mut __thread_aware_field_0,
                y: ref mut __thread_aware_field_1,
            } => {
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_0,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_1,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
            }
        }
    }
}
