crates/thread_aware_macros_impl/tests/snapshots/derive__union_not_supported.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
::core::compile_error! {
    "#[derive(ThreadAware)] does not support unions"
}
