crates/thread_aware_macros_impl/tests/snapshots/derive__user_where_clause_is_preserved.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T, U> ::thread_aware::ThreadAware for WithWhere<T, U>
where
    T: Clone,
    T: ::thread_aware::ThreadAware,
    core::marker::PhantomData<U>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.value,
            __thread_aware_source,
            __thread_aware_destination,
        );
        ::thread_aware::ThreadAware::relocate(
            &mut self.marker,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
